objects/Storage_Inverter_Module_Ratio__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Order Management: Inverter/Module ratios used for storage bundle cash order systems.
Release WW28 - 2016</description>
    <fields>
        <fullName>Inverter_Module_Ratio__c</fullName>
        <description>Order Management: Field to store the allowable ratio.
Release WW28 - 2016</description>
        <label>Inverter/Module Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_System_Size_Max__c</fullName>
        <description>Order Management: Field to store the lower threshold of the ratio.
Release WW28 - 2016</description>
        <label>Total System Size Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_System_Size_Min__c</fullName>
        <description>Order Management: Field to store the lower threshold of the ratio.
Release WW28 - 2016</description>
        <label>Total System Size Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Storage Specific Inverter/Module Ratios</label>
</CustomObject>